--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -17,7 +17,7 @@ body {
 
 header,
 footer {
-  background-color: green;
+  background-color: black;
   height: 100px;
 }
 
@@ -57,6 +57,9 @@ p {
 
 .site-info {
   flex-grow: 1;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
 }
 
 .site-title {
@@ -75,3 +78,68 @@ p {
 }
 
 /* End Of Header */
+
+/* Posts */
+.main-content-area {
+  padding: 2em;
+}
+
+.post {
+  background-color: white;
+  margin-bottom: 1em;
+}
+
+.post a {
+  color: black;
+  text-decoration: none;
+}
+
+.post-content {
+  padding: 0 40px 20px;
+}
+
+.post-content h2 {
+  background-color: #f6d200;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  margin: 0 -40px 30px;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: 60vh;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 810px) {
+
+  .posts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .post {
+    flex-basis: 49%;
+    /* border: 1px solid black; */
+  }
+}
+
+@media screen and (min-width: 1120px) {
+
+  .post-half {
+    flex-basis: 49%;
+  }
+
+  .post-one-third {
+    flex-basis: 32%;
+  }
+
+  .post-full {
+    flex-basis: 100%;
+  }
+}
+
+/* End Of Posts */
