End of watch today section

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -22,8 +22,8 @@ footer {
 }
 
 .sidebar-right {
-  background-color: blue;
-  color: white;
+  background-color: #ededed;
+  color: black;
 }
 
 h1 {
@@ -71,7 +71,7 @@ p {
 
 .site-description {
   text-align: center;
-  color: #f6d200;
+  color: #f6c85d;
   font-size: 1.2em;
   margin-top: -0.8;
   font-style: italic;
@@ -99,7 +99,7 @@ p {
 }
 
 .post-content h2 {
-  background-color: #f6d200;
+  background-color: #f6c85d;
   color: black;
   padding: 20px;
   text-align: center;
@@ -123,7 +123,6 @@ img {
 
   .post {
     flex-basis: 49%;
-    /* border: 1px solid black; */
   }
 }
 
@@ -143,3 +142,71 @@ img {
 }
 
 /* End Of Posts */
+
+/* Watch Today */
+
+.section-header {
+  color: black;
+  font-size: 3em;
+  text-align: center;
+}
+
+.watch-card {
+  margin-bottom: 1em;
+}
+
+.watch-content {
+  background-color: black;
+  color: white;
+  padding: 3em;
+}
+
+.watch-content h2 {
+  font-size: 2em;
+  font-weight: 300;
+  margin: 0;
+  text-transform: capitalize;
+}
+
+.movie-info {
+  font-weight: bold;
+}
+
+.movie-info span {
+  padding-right: 1.5em;
+}
+
+.movie-story {
+  margin: 1em 0;
+}
+
+.watch-content a {
+  color: white;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 1120px) {
+
+  .watch-card {
+    display: flex;
+  }
+
+  .watch-content {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+  }
+
+  .watch-img {
+    width: 60%;
+    height: 60vh;
+    object-fit: cover;
+    margin: 0 auto;
+  }
+
+  .image-right {
+    order: 2;
+  }
+}
+
+/* End Of Watch Today */
