--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -210,3 +210,102 @@ img {
 }
 
 /* End Of Watch Today */
+
+/* Download */
+
+.download-card {
+  margin-bottom: 1em;
+}
+
+.download-content {
+  background-color: white;
+  display: flex;
+  flex-flow: column;
+}
+
+.download-content a {
+  background-color: black;
+  color: white;
+  padding: 1em 2em;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.download-content a i {
+  font-size: 2.5em;
+}
+
+.download-info {
+  padding: 1em 2em;
+}
+
+.download-cast img {
+  height: 60px;
+  width: 60px;
+  padding: 0.1em;
+  border-radius: 50%;
+}
+
+.download-rating {
+  background-color: #f6c85d;
+  padding: 1em 2em;
+  color: black;
+  font-size: 0.9em;
+}
+
+.download-rating .rate {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: -0.25em;
+}
+
+.download-info h4 {
+  margin: 0;
+}
+
+.download-info p {
+  margin: 0;
+  font-size: 0.9em;
+}
+
+.download-content a,
+.download-rating {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.download-genre,
+.download-cast {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.download-info h4 {
+  flex-basis: 20%;
+}
+
+.download-genre {
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 810px) {
+
+  .download-content {
+    display: flex;
+    flex-flow: row;
+  }
+
+  .download-content a,
+  .download-rating {
+    flex-grow: 1;
+  }
+
+  .download-info {
+    flex-grow: 2;
+  }
+}
+
+/* End Of Download */
